@@ -14,6 +14,14 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Added new subtype 4 ST_MAT_WINDOW for building materials.  This allows the
+player to build windows in existing walls (if these walls have a corresponding
+window archetype).  Fixed an issue in apply_builder_floor() that could cause a
+floor to be removed twice when a wall was replaced by a floor.
+ include/define.h
+ server/build_map.c
+Raphaël Quinet 2008-08-04
+
 Bug fix: when building a new floor on top of an old floor, the old one was
 never removed, resulting in a stack of floors in some buildable areas.
  server/build_map.c
